k8s/catalog-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: catalog
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: catalog
    spec:
      containers:
        - name: catalop
          image: thegaijin/catalog
          ports:
            - containerPort: 8080
