k8s/customer-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: customer
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: customer
    spec:
      containers:
        - name: customer
          image: thegaijin/customer
          ports:
            - containerPort: 8080
