k8s/app-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: 'nginx'
  name: app-ingress
spec:
  rules:
    - host: thegaijin.xyz
      http:
        paths:
          - path: /apache
            backend:
              serviceName: apache-service
              servicePort: 80
          - path: /dashboard
            backend:
              serviceName: dashboard-service
              servicePort: 8080
          - path: /customer
            backend:
              serviceName: customer-service
              servicePort: 8080
          - path: /catalog
            backend:
              serviceName: catalog-service
              servicePort: 8080
          - path: /order
            backend:
              serviceName: order-service
              servicePort: 8080
